--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=oracle.jdbc.OrcaleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=charan
-spring.datasource.password=system
+spring.datasource.username=c##charan
+spring.datasource.password=cherry007
